# VideoDoorStateMonitoring

./: README.md  Video_Door_State_Monitoring.ipynb  postBuild  pyproject.toml  requirements.txt
results/: basic_esn_hls_100_final_results.joblib  basic_esn_hls_1600_final_results.joblib  basic_esn_hls_200_final_results.joblib  basic_esn_hls_3200_final_results.joblib  basic_esn_hls_400_final_results.joblib  basic_esn_hls_50_final_results.joblib  basic_esn_hls_800_final_results.joblib  dlr_esn_hls_100_final_results.joblib  dlr_esn_hls_1600_final_results.joblib  dlr_esn_hls_200_final_results.joblib  dlr_esn_hls_3200_final_results.joblib  dlr_esn_hls_400_final_results.joblib  dlr_esn_hls_50_final_results.joblib  dlr_esn_hls_800_final_results.joblib  dlrb_esn_hls_100_final_results.joblib  dlrb_esn_hls_1600_final_results.joblib  dlrb_esn_hls_200_final_results.joblib  dlrb_esn_hls_3200_final_results.joblib  dlrb_esn_hls_400_final_results.joblib  dlrb_esn_hls_50_final_results.joblib  dlrb_esn_hls_800_final_results.joblib  kmeans_esn_hls_100_final_results.joblib  kmeans_esn_hls_1600_final_results.joblib  kmeans_esn_hls_200_final_results.joblib  kmeans_esn_hls_3200_final_results.joblib  kmeans_esn_hls_400_final_results.joblib  kmeans_esn_hls_50_final_results.joblib  kmeans_esn_hls_800_final_results.joblib  scr_esn_hls_100_final_results.joblib  scr_esn_hls_1600_final_results.joblib  scr_esn_hls_200_final_results.joblib  scr_esn_hls_3200_final_results.joblib  scr_esn_hls_400_final_results.joblib  scr_esn_hls_50_final_results.joblib  scr_esn_hls_800_final_results.joblib
src/: main.py
(+12 files in other folders)
