[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_door_state_monitoring_PETER_STEINER"
version = "0.0.1"
authors = [
    { name="Peter Steiner", email="peter.steiner@tu-dresden.de" },
]
description = "Non-Standard Echo State Networks for Video Door State Monitoring"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TUD-STKS/VideoDoorStateMonitoring"
"Bug Tracker" = "https://github.com/TUD-STKS/VideoDoorStateMonitoring/issues"
